--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,5 +59,5 @@ jobs:
 
        - name: Terraform plan status
          if: steps.plan.outcome == 'false'
-         trun: exit 1
+         run: exit 1
 
