--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,10 @@
 name: "Vprofile IAC"
-on:  
+on:
   push:
     branches:
       - main
       - stage
-    paths:
+    paths:  
       - terraform/**
   pull_request:
     branches:
@@ -12,14 +12,13 @@ on:
     paths:
       - terraform/**
 
-
 env:
  # Credentials for deployment to AWS
  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
- AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
  # S3 bucket for the Terraform state
  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
- AWS_REGION: us-east-1
+ AWS_REGION: us-east-2
  EKS_CLUSTER: vprofile-eks
 
 jobs:
@@ -32,7 +31,7 @@ jobs:
          working-directory: ./terraform
 
      steps:
-       - name: Checkout source code
+       - name: Checkout source code 
          uses: actions/checkout@v4
 
        - name: Setup Terraform with specified version on the runner
@@ -42,22 +41,21 @@ jobs:
 
        - name: Terraform init
          id: init
-         run: terraform init -backend-config="bucket=$Bucket_TF_STATE"
+         run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
 
-       - name: Terraform fmt
+       - name: Terraform format
          id: fmt
          run: terraform fmt -check
 
        - name: Terraform validate
          id: validate
-         run: terraform validate  
+         run: terraform validate
 
        - name: Terraform plan
          id: plan
-         run: terraform plan -no-colour -input=false -out planfile
-         continue-on-error : true
+         run: terraform plan -no-color -input=false -out planfile
+         continue-on-error: true
 
        - name: Terraform plan status
-         if: steps.plan.outcome == 'false'
-         run: exit 1
-
+         if: steps.plan.outcome == 'failure' 
+         run: exit 1     
