--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,7 +21,7 @@ env:
  AWS_REGION: us-east-2
  EKS_CLUSTER: vprofile-eks
 
-jjjobs:
+jobs:
    terraform:
      name: "Apply terraform code changes"
      runs-on: ubuntu-latest
